feat: notifications implemented. Notifications push not tested yet